--- a/Vote_Blockchain/app/src/main/res/values/strings.xml
+++ b/Vote_Blockchain/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
+    <string name="forgot_user_pass">Forgot User or Pass</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
